--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "KT플라자 유성점",
-  "short_name": "KT플라자 유성점",
+  "name": "KT플라자 만남로점",
+  "short_name": "KT플라자 만남로점",
   "lang": "ko-KR",
   "start_url": "./index.html",
   "display": "standalone",
